--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@
   --secondary-blue: #66a3f2;
   --light-gray: #f2f2f2;
   --dark: #0d0d0d;
+  --footer-height: 72px;
+  --sidebar-width: 220px;
 }
 
 * {
@@ -27,7 +29,7 @@ body {
   top: 0;
   left: 0;
   height: 100vh;
-  width: 220px;
+  width: var(--sidebar-width);
   background: #fff;
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.08);
   z-index: 1100;
@@ -77,18 +79,24 @@ body {
 
 /* Main */
 .main-content {
-  margin-left: 240px; /* sidebar width (220px) + 20px gap */
-  padding: 2rem;
-  max-height: 100vh;
-  min-height: calc(100vh - 6rem);
+  margin-left: var(--sidebar-width);
+  padding: 2rem 3rem 0rem 3rem;
+  min-height: calc(100vh - var(--footer-height));
 }
 
 /* Footer */
 footer {
+  margin-left: var(--sidebar-width);
+  height: var(--footer-height);
   background-color: var(--primary-blue);
   color: white;
-  padding: 2rem 0;
+  /* use height to control spacing */
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  z-index: 1000;
 }
 
 @media (max-width: 700px) {
